# Atlas

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: lint_code.yaml
Atlas-Client/src/: lib.rs
Atlas-Decision-Log/src/: lib.rs
Atlas-Log-Transfer/src/: lib.rs
Atlas-Log-Transfer/src/metrics/: mod.rs
Atlas-Logging-Core/src/: lib.rs
Atlas-Logging-Core/src/decision_log/: mod.rs
Atlas-Logging-Core/src/log_transfer/: mod.rs
Atlas-Persistent-Log/: README.md
Atlas-Persistent-Log/src/: lib.rs
Atlas-Persistent-Log/src/backlog/: mod.rs
Atlas-Persistent-Log/src/serialize/: mod.rs
Atlas-Persistent-Log/src/stateful_logs/: divisible_state.rs  monolithic_state.rs
Atlas-Persistent-Log/src/worker/: mod.rs
Atlas-SMR-Core/src/: lib.rs
Atlas-SMR-Replica/: README.md
Atlas-SMR-Replica/src/: lib.rs
Atlas-SMR-Replica/src/server/: decision_log.rs  mod.rs  state_transfer.rs  unordered_rq_handler.rs
Atlas-View-Transfer/src/: lib.rs
Atlas-View-Transfer/src/metrics/: mod.rs
Atlas-capnp/: build.rs
atlas-client/: Cargo.toml
atlas-client/src/client/: mod.rs
atlas-client/src/concurrent_client/: mod.rs
atlas-common/: Cargo.toml
atlas-common/src/: lib.rs
atlas-common/src/globals/: mod.rs
atlas-common/src/ordering/: mod.rs
atlas-common/src/peer_addr/: mod.rs
atlas-communication/: Cargo.toml
atlas-communication/src/: lib.rs
atlas-communication/src/client_pooling/: mod.rs
atlas-communication/src/config/: mod.rs
atlas-communication/src/cpu_workers/: mod.rs
atlas-communication/src/message/: mod.rs
atlas-communication/src/message_signing/: mod.rs
atlas-communication/src/mio_tcp/: mod.rs
atlas-communication/src/network_reconfiguration/: mod.rs
atlas-communication/src/protocol_node/: mod.rs
atlas-communication/src/reconfiguration_node/: mod.rs
atlas-communication/src/serialize/: mod.rs
atlas-communication/src/tcp_ip_simplex/: mod.rs
atlas-communication/src/tcpip/: mod.rs
atlas-communication/tests/: mod.rs
atlas-core/src/: lib.rs
atlas-core/src/followers/: mod.rs
atlas-core/src/log_transfer/: mod.rs
atlas-core/src/messages/: mod.rs
atlas-core/src/ordering_protocol/: mod.rs
atlas-core/src/persistent_log/: mod.rs
atlas-core/src/reconfiguration_protocol/: mod.rs
atlas-core/src/request_pre_processing/: mod.rs
atlas-core/src/serialize/: mod.rs
atlas-core/src/smr/: mod.rs
atlas-core/src/state_transfer/: mod.rs
atlas-core/src/timeouts/: mod.rs
atlas-execution/: Cargo.toml
atlas-execution/src/: lib.rs
atlas-execution/src/app/: mod.rs
atlas-execution/src/serialize/: mod.rs
atlas-execution/src/state/: mod.rs
atlas-execution/src/state/divisible_state/: mod.rs
atlas-execution/src/state/monolithic_state/: mod.rs
atlas-log-transfer/: Cargo.toml
atlas-log-transfer/src/: lib.rs
atlas-log-transfer/src/messages/: mod.rs
atlas-metrics/tests/: metrics_tests.rs
atlas-persistent-log/: Cargo.toml
atlas-persistent-log/src/: lib.rs
atlas-persistent-log/src/backlog/: mod.rs
atlas-persistent-log/src/persistency/: mod.rs
atlas-persistent-log/src/serialize/: mod.rs
atlas-persistent-log/src/worker/: mod.rs
atlas-reconfiguration/: Cargo.toml
atlas-reconfiguration/src/: lib.rs
atlas-replica/: Cargo.toml
atlas-replica/src/: lib.rs
atlas-smr-application/: Cargo.toml
atlas-smr-exec/: Cargo.toml
atlas-smr-exec/src/: lib.rs
atlas-smr-exec/src/metric/: mod.rs
atlas-smr-exec/src/scalable/: mod.rs
atlas-smr-exec/src/scalable/divisible_state_exec/: mod.rs
atlas-smr-exec/src/scalable/monolithic_exec/: mod.rs
atlas-smr-exec/src/single_threaded/divisible_state_exec/: mod.rs
atlas-smr-exec/src/single_threaded/monolithic_executor/: mod.rs
src/stateful_logs/: divisible_state.rs
(+83 files in other folders)
