description = "The Atlas framework"
authors = ["Nuno Neto <nuno.martingo@fc.up.pt>"]
license = "MIT"
homepage = "https://github.com/nuno1212s/atlas"
repository = "https://github.com/nuno1212s/atlas"
documentation = "https://docs.rs/atlas"
readme = "README.md"

[workspace]

members = [
    "Atlas-Common",
    "Atlas-Core",
    "Atlas-Decision-Log",
    "Atlas-Reconfiguration",
    "Atlas-Metrics",
    "Atlas-capnp",
    "Atlas-Communication",
    "Atlas-SMR-Execution",
    "Atlas-Client",
    "Atlas-SMR-Replica",
    "Atlas-Persistent-Log",
    "Atlas-Log-Transfer",
    "Atlas-SMR-Application",
    "Atlas-View-Transfer"
]

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
opt-level = 3
panic = "abort" # disable stack unwinding on panic
overflow-checks = false # disable integer overflow checks.
codegen-units = 16
lto = true # LLVM link time optimizations
debug = false
debug-assertions = false
incremental = false

[profile.dev]
opt-level = 0
panic = "unwind"
overflow-checks = true
codegen-units = 32
lto = false
debug = true
debug-assertions = true
incremental = true