description = "The Atlas framework"
authors = ["Nuno Neto <nuno.martingo@fc.up.pt>"]
license = "MIT"
homepage = "https://github.com/nuno1212s/atlas"
repository = "https://github.com/nuno1212s/atlas"
documentation = "https://docs.rs/atlas"
readme = "README.md"

[workspace]

members = [
    "Atlas-Common",
    "Atlas-Core",
    "Atlas-Decision-Log",
    "Atlas-Reconfiguration",
    "Atlas-Metrics",
    "Atlas-capnp",
    "Atlas-Communication",
    "Atlas-Comm-MIO",
    "Atlas-SMR-Execution",
    "Atlas-Client",
    "Atlas-SMR-Replica",
    "Atlas-Persistent-Log",
    "Atlas-Log-Transfer",
    "Atlas-SMR-Application",
    "Atlas-View-Transfer",
    "Atlas-Tools/atlas-default-configs",
    "Atlas-Tools/keygen"
]