[package]
name = "atlas-execution"
version = "0.1.0"
edition = "2021"
description = "The execution layer of the FeBFT SMR BFT"
authors = ["Nuno Neto <up201703898@fc.up.pt>"]
license = "MIT"
homepage = "https://github.com/nuno1212s/febft"
repository = "https://github.com/nuno1212s/febft"
documentation = "https://docs.rs/febft"
readme = "README.md"

[features]

serialize_capnp = []
serialize_serde = ["serde"]

[dependencies]
atlas-common = { path = "../atlas-common" }
atlas-communication = { path = "../atlas-communication" }
atlas-metrics = {path = "../atlas-metrics" }
serde = { version = "*", optional = true }