[package]
name = "atlas-smr-application"
version = "0.1.0"
edition = "2021"
description = "The Application layer for SMR applications for the Atlas framework"
authors = ["Nuno Neto <up201703898@fc.up.pt>"]
license = "MIT"
homepage = "https://github.com/nuno1212s/febft"
repository = "https://github.com/nuno1212s/febft"
documentation = "https://docs.rs/febft"
readme = "README.md"

[features]

serialize_capnp = []
serialize_serde = ["serde"]

[dependencies]
atlas-common = { path = "../atlas-common" }
atlas-communication = { path = "../atlas-communication" }
atlas-metrics = {path = "../atlas-metrics" }
serde = { version = "*", optional = true }