[package]
name = "atlas-smr-exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
atlas-communication = { path = "../atlas-communication" }
atlas-core = { path = "../atlas-core" }
atlas-execution = { path = "../atlas-execution" }
atlas-metrics = { path = "../atlas-metrics" }
atlas-common = { path = "../atlas-common" }